fix(www): Fix error centering on mobile.
Just use `flex`. I mean, react-materialize is using it under the hood in its utility classes, so it's not like doing it the old way was really helping anyone out.

--- a/packages/css/styles/bear.scss
+++ b/packages/css/styles/bear.scss
@@ -4,12 +4,4 @@
     white-space: nowrap;
     line-height: 1.5;
     user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
 }
